Add line break in footer email address

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ a:focus {
    <img id="preview-image" class="preview-image" src="" alt="Preview">
 
   <footer>
-    ariadnamavila@gmail.com
+    ariadnamavila@gmail.com <br>
   </footer>
 
 <script>
