Add favicon link to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ArMa</title>
+  <link rel="icon" type="image/x-icon" href="trailsicon3.png">
 <style>
   body {
     font-family: 'Courier New', monospace;
@@ -330,7 +331,7 @@ a:focus {
    <img id="preview-image" class="preview-image" src="" alt="Preview">
 
   <footer>
-    ariadnamavila@gmail.com <br>
+    ariadnamavila@gmail.com
   </footer>
 
 <script>
