--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ArMa</title>
-  <link rel="icon" type="image/x-icon" href="trailsicon3.png">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 <style>
   body {
     font-family: 'Courier New', monospace;
